<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/build_alarm_fragment"
    android:background="@color/black" >

    <EditText
        android:id="@+id/hour"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="135dp"
        android:layout_marginStart="80dp"
        android:gravity="center"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:ems="2"
        android:inputType="number"
        android:text="06"
        android:autofillHints="false"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/join"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="135dp"
        android:gravity="center"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:text="@string/join"

        app:layout_constraintStart_toEndOf="@id/hour"
        app:layout_constraintEnd_toStartOf="@id/minute"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.5"/>

    <EditText
        android:id="@+id/minute"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginTop="135dp"
        android:layout_marginEnd="80dp"
        android:gravity="center"
        android:textSize="50sp"
        android:textColor="@color/white"
        android:ems="2"
        android:inputType="number"
        android:text="00"
        android:autofillHints="false"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/cancel"

        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/save_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.5" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@color/black"
        android:gravity="center"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"

        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toEndOf="@id/cancel_button"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.5" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="135dp"
        android:background="@drawable/rounded_view_for_build_alarm"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/join"
        app:layout_constraintBottom_toTopOf="@id/cancel_button">

        <TextView
            android:id="@+id/alarm_day_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="25dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:text="Завтра-пн, 30 дек."

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ToggleButton
            android:id="@+id/monday"
            style="@style/week_button"
            android:layout_marginStart="8dp"
            android:textOn="@string/monday"
            android:textOff="@string/monday"

            app:layout_constraintTop_toBottomOf="@id/alarm_day_text"
            app:layout_constraintStart_toStartOf="parent" />

        <ToggleButton
            android:id="@+id/tuesday"
            style="@style/week_button"
            android:textOn="@string/tuesday"
            android:textOff="@string/tuesday"

            app:layout_constraintTop_toBottomOf="@id/alarm_day_text"
            app:layout_constraintStart_toEndOf="@id/monday" />

        <ToggleButton
            android:id="@+id/wednesday"
            style="@style/week_button"
            android:textOn="@string/wednesday"
            android:textOff="@string/wednesday"

            app:layout_constraintTop_toBottomOf="@id/alarm_day_text"
            app:layout_constraintStart_toEndOf="@id/tuesday" />

        <ToggleButton
            android:id="@+id/thursday"
            style="@style/week_button"
            android:textOn="@string/thursday"
            android:textOff="@string/thursday"

            app:layout_constraintTop_toBottomOf="@id/alarm_day_text"
            app:layout_constraintStart_toEndOf="@id/wednesday" />

        <ToggleButton
            android:id="@+id/friday"
            style="@style/week_button"
            android:textOn="@string/friday"
            android:textOff="@string/friday"

            app:layout_constraintTop_toBottomOf="@id/alarm_day_text"
            app:layout_constraintStart_toEndOf="@id/thursday" />

        <ToggleButton
            android:id="@+id/saturday"
            style="@style/week_button"
            android:textOn="@string/saturday"
            android:textOff="@string/saturday"

            app:layout_constraintTop_toBottomOf="@id/alarm_day_text"
            app:layout_constraintStart_toEndOf="@id/friday" />

        <ToggleButton
            android:id="@+id/sunday"
            style="@style/week_button"
            android:textOn="@string/sunday"
            android:textOff="@string/sunday"

            app:layout_constraintTop_toBottomOf="@id/alarm_day_text"
            app:layout_constraintStart_toEndOf="@id/saturday" />

        <EditText
            android:id="@+id/alarm_name"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="32dp"
            android:inputType="text"
            android:hint="@string/hint_alarm_name"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textColorHint="@color/light_grey"
            android:backgroundTint="@color/light_grey"

            app:layout_constraintTop_toBottomOf="@id/monday"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/alarm_sound"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"

            app:layout_constraintTop_toBottomOf="@id/alarm_name"
            app:layout_constraintStart_toStartOf="parent" >

            <TextView
                android:id="@+id/alarm_sound_text"
                style="@style/alarm_settings_text"
                android:text="@string/alarm_sound"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/sound_name"
                style="@style/alarm_settings_name"
                tools:text="Numb"

                app:layout_constraintTop_toBottomOf="@id/alarm_sound_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/sound_switch"
                style="@style/alarm_settings_state"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0.5"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/alarm_vibration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@id/alarm_sound"
            app:layout_constraintStart_toStartOf="parent" >

            <TextView
                android:id="@+id/alarm_vibration_text"
                style="@style/alarm_settings_text"
                android:text="@string/vibration"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/vibration_name"
                style="@style/alarm_settings_name"
                tools:text="Basic call"

                app:layout_constraintTop_toBottomOf="@id/alarm_vibration_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/vibration_switch"
                style="@style/alarm_settings_state"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0.5"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/del_after_use"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            app:layout_constraintTop_toBottomOf="@id/alarm_vibration"
            app:layout_constraintStart_toStartOf="parent" >

            <TextView
                android:id="@+id/del_after_use_text"
                style="@style/alarm_settings_text"
                android:text="@string/delAfterUse"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/del_after_use_state"
                style="@style/alarm_settings_name"
                android:text="@string/state_on"

                app:layout_constraintTop_toBottomOf="@id/del_after_use_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/del_after_use_switch"
                style="@style/alarm_settings_state"

                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0.5"/>
        </androidx.constraintlayout.widget.ConstraintLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>