<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:id="@+id/alarms_fragment">

    <TextView
        android:id="@+id/next_alarm_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:text="@string/alarms_title"
        android:gravity="center"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/alarms"
        app:layout_constraintVertical_bias="0.5" />

    <ImageButton
        android:id="@+id/more_action_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@color/black"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_points"
        android:contentDescription="@string/more_action"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/alarms" />

    <ImageButton
        android:id="@+id/new_alarm_button"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="10dp"
        android:background="@color/black"
        android:scaleType="fitCenter"
        android:src="@drawable/icon_plus"
        android:contentDescription="@string/add_alarm"

        app:layout_constraintEnd_toStartOf="@+id/more_action_button"
        app:layout_constraintBottom_toTopOf="@id/alarms" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/alarms"
        android:layout_width="match_parent"
        android:layout_height="440dp"
        android:layout_marginBottom="70dp"
        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>